Replace deprecated APIs
Use `try`-with-resources where appropriate which
also replaces `IOUtils::closeQuietly`.